# bitcoin_project

./: .gitignore  main.py  pyproject.toml  pytest.ini
api/: api_client.py
api_config/: api_config.json
config/: .env
helper/: config_loader.py  data_fetcher.py  email_sender.py  logger_helper.py  plot_geneartor.py
tests/: test_api.py
