[project]
name = "bitcoin-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Yaronmd",email = "yaronmord@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright (>=1.52.0,<2.0.0)",
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
